[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zolltools"
version = "0.0.3.dev1"
authors = [
  { name="Joshua Shew", email="joshua.t.shew@gmail.com" },
]
description = "A package for working with large SAS files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jython1415/zolltools"
"Bug Tracker" = "https://github.com/Jython1415/zolltools/issues"
